<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="12dp"
    android:layout_marginBottom="8dp"
    android:layout_marginRight="12dp"
    android:background="#00000000"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardPreventCornerOverlap="true"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp">

        <TextView
            android:id="@+id/txtCompanyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:padding="2dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="شرکت بیمه پارسیان"
            android:textColor="#4d4d4d"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/imgCompanyLogo"
            app:layout_constraintRight_toLeftOf="@id/imgCompanyLogo"
            app:layout_constraintTop_toTopOf="@+id/imgCompanyLogo" />

        <ImageView
            android:id="@+id/imgCompanyLogo"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:minHeight="56dp"
            android:scaleType="centerInside"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txtPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#fbcd00"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:padding="2dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:text="@string/ten_percent"
                android:textColor="#4d4d4d"
                android:textSize="14sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txtDiscountedPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:padding="2dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="۱،۴۳۰،۰۰۰"
            android:textColor="#b5b5b5"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="@id/txtPrice"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtTooman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:padding="2dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/tooman"
            android:textColor="#b5b5b5"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/txtPrice"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtPrice" />

        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:padding="2dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="۱،۴۳۰،۰۰۰"
            android:textColor="#4d4d4d"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/txtTooman"
            app:layout_constraintTop_toBottomOf="@+id/cardViewPercent" />


        <LinearLayout
            android:id="@+id/linearRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="right"
            android:orientation="horizontal"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgCompanyLogo">

            <TextView
                android:id="@+id/txtRateDesc"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="از ۵ (۲۵۰ نظر )"
                android:textColor="#919191"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtRate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="۴.۵۵"
                android:textColor="#808080"
                android:textSize="12sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:padding="4dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_star" />

        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="#f2f2f2"
            app:layout_constraintTop_toBottomOf="@id/linearRate" />

        <LinearLayout
            android:id="@+id/linearWatchAndOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_margin="4dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:id="@+id/txtShowAndOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/watch_and_order"
                android:textColor="#b5b5b5"
                android:textSize="12sp" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>

